# robotarm

./: CNAME  index.html  install.sh  params.json  readme.md  slides.md
EyeTracker/: Calibration.cpp  Calibration.h  EyeTracking.cpp  EyeTracking.h  Tracking.cpp  Tracking.h  main.cpp
EyeTracker/Calibration/: Calibration.cpp  Calibration.h  CalibrationScreen.cpp  CalibrationScreen.h  Linear.cpp  Linear.h  Quadratic.cpp  Quadratic.h  WindowsSizer.cpp  WindowsSizer.h
EyeTracker/CircleFinder/: HoughCircleFnder.cpp  HoughCircleFnder.h  RectangleSearcher.cpp  RectangleSearcher.h
EyeTracker/CircleFinder/Variables/: CircleLocation.cpp  CircleLocation.h  Rectangle.cpp  Rectangle.h
EyeTracker/Common/: EyeTimers.cpp  WinEyeTimers.cpp  WinEyeTimers.h  WindowsSizer.h
EyeTracker/EyeTracking/: Tracking.cpp  Tracking.h
EyeTracker/EyeTracking/CircleFinder/: HoughCircleFnder.cpp  HoughCircleFnder.h  RectangleSearcher.h
EyeTracker/EyeTracking/GlintFinder/: GlintFinder.cpp  GlintFinder.h
EyeTracker/EyeTracking/Mapping/: LineFinder.cpp  LineFinder.h  (+1 more)
EyeTracker/GlintFinder/: GlintFinder.cpp  GlintFinder.h
EyeTracker/ImageProcessing/: DoProcessing.cpp  DoProcessing.h  ImagePlaying.cpp  ImagePlaying.h  WHYOPENCVWHY.h
EyeTracker/Kinect/: libfreenect_cv.c  libfreenect_cv.h
EyeTracker/Mapping/: JRPointTypes.h  LineFinder.cpp  LineFinder.h  Linear.cpp  Linear.h
EyeTracker/PSEye/: EyeTimers.cpp  EyeTimers.h  PSEyeGetter.cpp  PSEyeGetter.h  PSEye_OpenCV.cpp  PSEye_OpenCV.h
EyeTracker/Variables/: CircleLocation.cpp  CircleLocation.h  EyeDifferance.cpp  EyeDifferance.h  EyePoint.cpp  EyePoint.h  EyeRange.cpp  EyeRange.h  EyeRectangle.cpp  EyeRectangle.h  GlintLocation.cpp  GlintLocation.h  MultiCircleLocations.cpp  MultiCircleLocations.h
Kinect Object Detector/: README.md
Kinect Object Detector/Kinect Control/: JRKinectController.h  JRKinectController.m  JRKinectHelpers.c  JRKinectHelpers.h
Kinect Object Detector/Kinect Object Detector/: JRAppDelegate.h  JRAppDelegate.m  JRConstants.h  JRConstants.m  Kinect Object Detector-Prefix.pch  main.m
Kinect Object Detector/Kinect Object Detector.xcodeproj/: project.pbxproj
Kinect Object Detector/Object Detection/: JRObjectDetector.h  JRObjectDetector.m  JRObjectHelpers.c  JRObjectHelpers.h  JRPointTypes.h
Kinect Object Detector/OpenGL View/: GLProgram.h  GLProgram.m  GLView.h  GLView.m  JRPointRotationXYZ.m
Object Detector/: README.md
Object Detector/Kinect Control/: JRKinectController.h  JRKinectController.m  JRKinectHelpers.c  JRKinectHelpers.h
Object Detector/Kinect Object Detector/: JRAppDelegate.h  JRAppDelegate.m  JRConstants.h  JRConstants.m  Object Detector-Info.plist
Object Detector/Object Detection/: JRObjectDetector.h  JRObjectDetector.m  JRObjectHelpers.h  JRPointTypes.h
Object Detector/Object Detector.xcodeproj/: project.pbxproj
Object Detector/OpenGL View/: GLProgram.m  GLView.h  GLView.m  JRPointRotationXYZ.h
ToTestWith/PSReTest/: PSReTest.cbp  PSReTest.depend  PSReTest.layout  PSTesting.cpp  PSTesting.h  main.cpp
cloud_viewer/: CloudViewer.cpp  CloudViewer.h
documentation/: executive_layout.md
documentation/Kinect Object Detector Images/: Thumbs.db
documentation/testing/: Log.md
extract_indices/: extract_indices.cpp
helpers/: CloudUtils.hpp  Freenect.hpp  Mutex.hpp  ObjectDetector.hpp  TableTopDetector.cpp  TableTopDetector.h
object_detect/: CMakeLists.txt  OKPCL.cpp  basic.cpp  basiclinux.cpp  libfreenect.hpp  main.cpp  okpcl2.cpp  output  readme.md  segmentaion.cpp  simple.cpp  simplecloudviewer.cpp  simplegl.cpp  table_top_detector.cpp  table_top_detector.h  table_top_detector_main.cpp  tabledetect.cpp
style/: impress.less  style.css  style.less
(+49 files in other folders)
